Prevent browser zoom on mobile

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -61,7 +61,7 @@ img {
   position: relative;
   max-height: calc(100vh - 4em);
   max-width: calc(100vw - 4em);
-  border-radius: 8px;
+  border-radius: 12px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   transition: opacity 250ms ease-in-out;
 }
